# bitcoin

./: CMakeLists.txt  configure.ac
.github/workflows/: ci.yml
ci/test/: 03_test_script.sh
cmake/: ccache.cmake
contrib/devtools/: check-deps.sh  gen-manpages.py  symbol-check.py
contrib/guix/: manifest.scm
depends/: Makefile  README.md  toolchain.cmake.in
depends/hosts/: mingw32.mk
doc/: build-osx.md  build-unix.md  dependencies.md  developer-notes.md  release-notes.md  release-process.md  tracing.md
share/: setup.nsi.in
src/: CMakeLists.txt  Makefile.am  Makefile.test.include  addrdb.cpp  addrman.cpp  bitcoin-cli.cpp  clientversion.cpp  coins.cpp  coins.h  httpserver.cpp  init.cpp  inputfetcher.h  logging.cpp  mapport.cpp  net.cpp  net.h  net_processing.cpp  net_processing.h  netbase.cpp  psbt.cpp  psbt.h  pubkey.cpp  random.cpp  txmempool.cpp  txmempool.h  txorphanage.cpp  txorphanage.h  validation.cpp  validation.h
src/bench/: CMakeLists.txt
src/common/: args.cpp  args.h  netif.cpp
src/index/: base.cpp
src/init/: common.cpp
src/interfaces/: chain.h  node.h
src/kernel/: CMakeLists.txt  bitcoinkernel.cpp  bitcoinkernel.h  bitcoinkernel_wrapper.h
src/node/: interfaces.cpp  txdownloadman.h  txdownloadman_impl.cpp  txdownloadman_impl.h
src/policy/: fee_estimator.cpp  fee_estimator.h
src/qt/: CMakeLists.txt  bitcoin.cpp  rpcconsole.cpp
src/rpc/: blockchain.cpp  client.cpp  mempool.cpp  mining.cpp  net.cpp  node.cpp  rawtransaction.cpp  server.cpp  server.h  util.cpp
src/script/: descriptor.cpp
src/test/: CMakeLists.txt  coins_tests.cpp  (+12 more)
(+54 files in other folders)
